--- a/SignalRApp/Views/Home/Index.cshtml
+++ b/SignalRApp/Views/Home/Index.cshtml
@@ -1,57 +1,41 @@
-﻿@{
-    Layout = null;
-}
- 
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Главная</title>
+    <title>SignalR Chat</title>
 </head>
 <body>
- 
-    <form method="post">
-        <input type="text" name="product" id="productField" />
-        <input type="submit" value="Отправить" id="submitForm" />
-    </form>
- 
-    <div id="notify"></div>
- 
+    <div id="inputForm">
+        <label>Имя</label><br />
+        <input type="text" id="name" /><br /><br />
+        <label>Возраст</label><br />
+        <input type="number" id="age" /><br /><br />
+        <input type="button" id="sendBtn" value="Отправить" />
+    </div>
+    <div><p id="response"></p></div>
     <script src="js/signalr/dist/browser/signalr.min.js"></script>
     <script>
         const hubConnection = new signalR.HubConnectionBuilder()
             .withUrl("/chat")
             .build();
-        let connectionId = "";
-        document.getElementById("submitForm")
-            .addEventListener("click", function (e) {
-                e.preventDefault();
  
-                const data = new FormData();
-                data.append("product", document.getElementById("productField").value);
-                data.append("connectionId", connectionId);
-                 
-                fetch("home/create", {
-                    method: "POST",
-                    body: data
-                })
-                .catch(error => console.error("Error: ", error));
-            });
         // получение сообщения от сервера
-        hubConnection.on("Notify", function (message) {
+        hubConnection.on("Receive", function (user) {
  
-            // создает элемент <p> для сообщения пользователя
-            let elem = document.createElement("p");
-            elem.appendChild(document.createTextNode(message));
- 
-            document.getElementById("notify").appendChild(elem);
- 
+            document.getElementById("response").innerText = "Имя: " + user.name + " Возраст: " + user.age;
         });
-        hubConnection.start().then(() => {
-            // после соединения получаем id подключения
-            console.log(hubConnection.connectionId);
-            connectionId = hubConnection.connectionId;
+ 
+        // отправка сообщения на сервер
+        document.getElementById("sendBtn").addEventListener("click", function (e) {
+            let name = document.getElementById("name").value;
+            let age = document.getElementById("age").value;
+ 
+            hubConnection.invoke("Send", { "name": name, "age": parseInt(age) });
+            document.getElementById("name").value = "";
+            document.getElementById("age").value = "";
         });
+ 
+        hubConnection.start();
     </script>
 </body>
 </html>
